Complete terraform-foundation build-out
- Add 10 workload templates: ECS, EKS, Lambda, RDS, DynamoDB, Redis, SQS, EventBridge, Step Functions, Static Site
- Add 18 reusable modules including alerting, backup-plan, security-baseline, vpc-endpoints, waf-alb
- Add 8 SCPs for organization security
- Add Terragrunt support with live/prod/staging/dev
- Add CI/CD: GitHub Actions, pre-commit, tflint
- Add documentation: SECURITY.md, COST-OPTIMIZATION.md
- Add helper scripts: new-workload.sh, new-tenant.sh, apply-all.sh

~10,000 lines of Terraform covering enterprise AWS patterns

--- a/terraform/00-bootstrap/terraform.tfvars.example
+++ b/terraform/00-bootstrap/terraform.tfvars.example
@@ -1,12 +1,6 @@
-# Copy to terraform.tfvars and customize
+# Example variables for 00-bootstrap layer
+# Copy to terraform.tfvars and update values
 
-# Project name (used for S3 bucket, must be globally unique)
-project_name = "mycompany"
-
-# Deployment mode
-# - "single-account": Everything in one account (startups, POCs)
-# - "multi-account":  Separate accounts per environment (enterprise)
-deployment_mode = "single-account"
-
-# AWS Region
-region = "us-east-1"
+project_name    = "myproject"
+deployment_mode = "single-account"  # or "multi-account"
+region          = "us-east-1"
